--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,11 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  http: ^1.2.2
+  fpdart: ^1.1.0
+  flutter_bloc: ^8.1.6
+  get_it: ^8.0.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
