--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   get_it: ^8.0.0
   flutter_dotenv: ^5.2.1
-  image_picker: ^1.1.2
+  typewritertext: ^3.0.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
