--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   get_it: ^8.0.0
   flutter_dotenv: ^5.2.1
   typewritertext: ^3.0.9
+  shared_preferences: ^2.3.3
+  uuid: ^4.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
